--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 sdl2 = { version = "0.37.0", features = ["image", "bundled"] }
+serde = { version = "1.0", features = ["derive"] }
+ron = "0.8"
